# bmmpy

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.cuda-manylinux  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
bench/: fwht16_bench.cpp
bmmpy/: __init__.py  __init__.pyi  _bmmpy.pyi  apply.py  candidate.py  ga.py  generators.py  matrix.py  search.py  solver.py  workflows.py
bmmpy/algebra/: __init__.py  generators.py  transforms.py
bmmpy/algebra/mastrovito/: __init__.py  bit_algebra.py  conversions.py  core.py  parsing.py
cmake/: bmmpyConfig.cmake.in
include/: bmmpy.hpp
include/bmmpy/: stub.hpp
include/bmmpy/algebra/: mastrovito.hpp  transform_utils.hpp  transforms.hpp
include/bmmpy/apply/: apply_result.hpp  global_greedy_applier.hpp  greedy_applier.hpp  greedy_selection.hpp
include/bmmpy/core/: binary_matrix.hpp  bit_matrix.hpp  bit_vector.hpp  row_window.hpp
include/bmmpy/core/detail/: bit_intrinsics.hpp  bit_ops.hpp  row_combination.hpp  xor_basis.hpp  xorshift64.hpp
include/bmmpy/fwht16/: constants.hpp  cpu_dispatch.hpp  cpu_executor.hpp  cpu_kernel.hpp  engine.hpp  gpu_executor.hpp  types.hpp
include/bmmpy/ga/: algorithm.hpp  genetic_algorithm.hpp  genetic_algorithm_internal.hpp  island.hpp  island_model.hpp  migration_channel.hpp  types.hpp  worker.hpp
include/bmmpy/ga/migration/: bounded_channel.hpp  channel.hpp
include/bmmpy/math/: comb.hpp  fwht.hpp
include/bmmpy/math/detail/: fwht_ops.hpp
include/bmmpy/search/: bruteforce_search.hpp  cuda_bruteforce_launch.hpp  cuda_bruteforce_search.hpp  cuda_launch_result_buffers.cuh  cuda_launch_topk.cuh  cuda_mitm_fwht_launch.hpp  cuda_mitm_fwht_search.hpp  fwht_search.hpp  mitm_fwht_search.hpp  sa_selector.hpp  sa_selector_internal.hpp  searcher.hpp  split_window_prep.hpp
include/bmmpy/solver/: exact_basis_solver.hpp
include/bmmpy/types/: candidate.hpp  epoch_table.hpp
python/bindings/: algebra.cpp  apply.cpp  bindings.hpp  bit_matrix.cpp  candidate.cpp  ga.cpp  main.cpp  math.cpp  runtime.cpp  search.cpp  solver.cpp  window.cpp
scripts/: bump_ver.py  release.py
src/: cli.cpp  greedy_selection.cpp  stub.cpp
src/algebra/: mastrovito.cpp  transform_utils.cpp  transforms.cpp
src/apply/: global_greedy_applier.cpp  greedy_applier.cpp  greedy_selection.cpp
src/core/: bit_matrix.cpp  bit_matrix_algebra.cpp  bit_matrix_hash.cpp  bit_matrix_io.cpp  bit_matrix_rows.cpp  bit_ops_avx2.cpp  bit_ops_dispatch.cpp  bit_ops_scalar.cpp  row_window.cpp
src/fwht16/: cpu_dispatch.cpp  cpu_executor.cpp  cpu_kernel_avx2.cpp  cpu_kernel_scalar.cpp  engine.cpp  gpu_executor.cpp
src/ga/: Island.cpp  bounded_channel.cpp  genetic_algorithm.cpp  genetic_algorithm_core.cpp  genetic_algorithm_lifecycle.cpp  genetic_algorithm_operators.cpp  genetic_algorithm_population.cpp  island.cpp  island_model.cpp
src/math/: comb.cpp  fwht.cpp  fwht_avx2.cpp  fwht_dispatch.cpp  fwht_scalar.cpp
src/search/: bruteforce_search.cpp  cuda_bruteforce_launch.cu  cuda_bruteforce_search.cpp  cuda_launch_runtime.cuh  cuda_launch_topk.cuh  cuda_mitm_fwht_launch.cu  cuda_mitm_fwht_search.cpp  fwht_search.cpp  mitm_fwht_search.cpp  sa_selector.cpp  sa_selector_higher_order.cpp  sa_selector_pairwise.cpp  split_window_prep.cpp
src/solver/: exact_basis_solver.cpp
tests/: bit_matrix_tests.cpp  fwht16_tests.cpp  math_tests.cpp  python_api_tests.py
tests/cpp/: algebra_core_tests.cpp  bit_matrix_hash_tests.cpp  bit_matrix_io_tests.cpp  bit_matrix_rows_tests.cpp  bit_matrix_storage_tests.cpp  fwht_tests.cpp  sa_selector_tests.cpp  search_cpu_tests.cpp  search_cuda_tests.cpp  umbrella_header_tests.cpp
tests/python/: main.py  test_algebra_mastrovito.py  test_cuda_api.py  test_ga_api.py  test_matrix_api.py  test_public_api.py  test_search_api.py
tests/support/: test_common.hpp
